added the word AGAIN

--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
     </head>
     <body>
         <h1>Using Git</h1>
-        <p>Changing my first versioned file</p>
+        <p>Changing my first versioned file AGAIN</p>
     </body>
 </html>
