Added <th> to define Year, Team and Coach

--- a/html/exercises/ex_8/index8.html
+++ b/html/exercises/ex_8/index8.html
@@ -12,9 +12,9 @@
         <h3>Champions</h3>
         <table>
             <tr>
-                <td>Year</td>
-                <td>Team</td>
-                <td>Coach</td>
+                <th>Year</th>
+                <th>Team</th>
+                <th>Coach</th>
             </tr>
             <tr>
                 <td>2017</td>
