--- a/html/exercises/ex_1/index1.html
+++ b/html/exercises/ex_1/index1.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Exercise 1</title>
+        <title>Exercise_1</title>
     </head>
     <body>
         It all started with an HTML file!!
