--- a/html/exercises/ex_5/index.html
+++ b/html/exercises/ex_5/index.html
@@ -10,9 +10,9 @@
     <h1>Index Page</h1>
     <hr>
         <ul>
-            <li><a href="/Exercises/ex_5/about.html">About</a></li>
-            <li><a href="/Exercises/ex_5/contact.html">Contact</a></li>
-            <li><a href="/Exercises/ex_5/news.html">News</a></li>
+            <li><a href="about.html">About</a></li>
+            <li><a href="contact.html">Contact</a></li>
+            <li><a href="news.html">News</a></li>
         </ul>
         <hr>
         <br>
