--- a/html/exercises/ex_11/index.html
+++ b/html/exercises/ex_11/index.html
@@ -7,6 +7,10 @@
     <body>
         <h1>Login</h1>
         <hr>
-        
+        <form action="login.html" method="GET" enctype="application/x-www-form-urlencoded">
+        <input type="text" name="username" placeholder="username" size="30" maxlength="12">
+        <input type="password" name="password" size="30" maxlength="8" placeholder="password">
+        <input type="submit" value="Login" name="login">
+        </form>
     </body>
 </html>
